--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,6 +1,5 @@
 version: "3.3"
 services:
-
   proxy:
     image: traefik:v2.3
     volumes:
@@ -48,26 +47,26 @@ services:
     ports:
       - "8080:8080"
 
-  backend:
-    restart: "no"
-    ports:
-      - "8888:8888"
-    volumes:
-      - ./backend/:/app
-    build:
-      context: ./backend
-      args:
-        INSTALL_DEV: ${INSTALL_DEV-true}
-    # command: sleep infinity  # Infinite loop to keep container alive doing nothing
-    command: /start-reload.sh
+  # backend:
+  #   restart: "no"
+  #   ports:
+  #     - "8888:8888"
+  #   volumes:
+  #     - ./backend/:/app
+  #   build:
+  #     context: ./backend
+  #     args:
+  #       INSTALL_DEV: ${INSTALL_DEV-true}
+  #   # command: sleep infinity  # Infinite loop to keep container alive doing nothing
+  #   command: /start-reload.sh
 
-  frontend:
-    restart: "no"
-    build:
-      context: ./frontend
-      args:
-        - VITE_API_URL=http://${DOMAIN?Variable not set}
-        - NODE_ENV=development
+  # frontend:
+  #   restart: "no"
+  #   build:
+  #     context: ./frontend
+  #     args:
+  #       - VITE_API_URL=http://${DOMAIN?Variable not set}
+  #       - NODE_ENV=development
 
 networks:
   traefik-public:
