--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "app"
+name = "human_resource_app"
 version = "0.1.0"
 description = ""
 authors = ["Admin <admin@example.com>"]
